k8s-manifests/department-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: department-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: department-service
  template:
    metadata:
      labels:
        app: department-service
    spec:
      containers:
      - name: department-service
        image: ${DOCKER_REGISTRY}/department-service:latest
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: department-service
spec:
  selector:
    app: department-service
  ports:
  - port: 8083
    targetPort: 8083
  type: ClusterIP
